# legalscraper

./: README.md  pyproject.toml
src/legalscraper/: __init__.py  __main__.py
src/legalscraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
